[package]
name = "rust_yahoo_finance_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
# reqwest = "0.12.23"
rustfmt = "0.10.0"
# tokio = "1.47.1"
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio = { version = "1.47", features = ["full"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.93"}
chrono = "0.4.41"
yahoo_finance_api = "4.1.0"
time = "0.3.41"
tokio-test = "0.4.4"
